5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4183/executions/1667_2318.log
== TEST (2019-04-16 17:05:51) 
-- CODE:
p1 = input("Nome: ")
s = 20.114*0.4379
print(s)
-- OUTPUT:
8.807920600000001
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 17:07:42) 
-- CODE:
p1 = input("Nome: ")
s = 20.114*0.4379
v = 19.984*4.289
if (p1 == "Voldemort"):
	print(round(v,13))
-- OUTPUT:
8.807920600000001
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 17:08:09) 
-- CODE:
p1 = input("Nome: ")
s = 20.114*0.4379
v = 19.984*4.289
if (p1 == "Voldemort"):
	print(round(v,13))
else: 
	print(round(s,13))
-- OUTPUT:
8.8079206
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 17:08:50) 
-- CODE:
p1 = input("Nome: ")
s = 20.114*0.4379
v = 19.984*4.289
if (p1 == "Voldemort".upper()):
	print(round(v,13))
else: 
	print(round(s,13))
-- OUTPUT:
8.8079206
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 17:09:03) 
-- CODE:
p1 = input("Nome: ")
s = 20.114*0.4379
v = 19.984*4.289
if (p1 == "Voldemort".upper()):
	print(round(v,13))
else: 
	print(round(s,13))
-- EXECUTION TIME:
0.146215
-- TEST CASE 1:
---- input:
SNAPE
---- correct output:
45.9328613838776
---- user output:
8.8079206
-- TEST CASE 2:
---- input:
VOLDEMORT
---- correct output:
4.6593611564467246
---- user output:
85.711376
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 17:10:09) 
-- CODE:
p1 = input("Nome: ")
s = 20.114*(0.4379*60
v = 19.984*(4.289*60)
if (p1 == "Voldemort".upper()):
	print(round(v,13))
else: 
	print(round(s,13))
-- ERROR:
File "XXXX", line 3
    v = 19.984*(4.289*60)
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 17:10:26) 
-- CODE:
p1 = input("Nome: ")
s = 20.114*(0.4379*60)
v = 19.984*(4.289*60)
if (p1 == "Voldemort".upper()):
	print(round(v,13))
else: 
	print(round(s,13))
-- OUTPUT:
528.475236
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 17:24:48) 
-- CODE:
p1 = input("Nome: ")
s = 20.114/0.4379
v = 19.984/4.289
if (p1 == "Voldemort".upper()):
	print(round(v,13))
else: 
	print(round(s,13))
-- OUTPUT:
45.9328613838776
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 17:24:57) 
-- CODE:
p1 = input("Nome: ")
s = 20.114/0.4379
v = 19.984/4.289
if (p1 == "Voldemort".upper()):
	print(round(v,13))
else: 
	print(round(s,13))
-- EXECUTION TIME:
0.140603
-- TEST CASE 1:
---- input:
SNAPE
---- correct output:
45.9328613838776
---- user output:
45.9328613838776
-- TEST CASE 2:
---- input:
VOLDEMORT
---- correct output:
4.6593611564467246
---- user output:
4.6593611564467
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 17:25:06) 
-- CODE:
p1 = input("Nome: ")
s = 20.114/0.4379
v = 19.984/4.289
if (p1 == "Voldemort".upper()):
	print(round(v,13))
else: 
	print(round(s,13))
-- OUTPUT:
45.9328613838776
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 17:25:13) 
-- CODE:
p1 = input("Nome: ")
s = 20.114/0.4379
v = 19.984/4.289
if (p1 == Voldemort.upper()):
	print(round(v,13))
else: 
	print(round(s,13))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    if (p1 == Voldemort.upper()):
NameError: name 'Voldemort' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 17:25:36) 
-- CODE:
p1 = input("Nome: ")
s = 20.114/0.4379
v = 19.984/4.289
if (p1 == "Voldemort".upper()):
	print(round(v,13))
else: 
	print(round(s,13))
-- OUTPUT:
45.9328613838776
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 17:26:05) 
-- CODE:
p1 = input("Nome: ")
s = 20.114/0.4379
v = 19.984/4.289
if (p1 == "Snape".upper()):
	print(round(s,13))
else: 
	print(round(v,13))
-- OUTPUT:
45.9328613838776
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 17:26:34) 
-- CODE:
p1 = input("Nome: ")
s = 20.114/0.4379
v = 19.984/4.289
if (p1 == "Voldemort".upper()):
	print(round(v,13))
else: 
	print(round(s,13))
-- OUTPUT:
45.9328613838776
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 17:26:48) 
-- CODE:
p1 = input("Nome: ")
s = 20.114/0.4379
v = 19.984/4.289
if (p1 == "Voldemort".upper()):
	print(round(v,13))
else: 
	print(round(s,13))
-- EXECUTION TIME:
0.173727
-- TEST CASE 1:
---- input:
SNAPE
---- correct output:
45.9328613838776
---- user output:
45.9328613838776
-- TEST CASE 2:
---- input:
VOLDEMORT
---- correct output:
4.6593611564467246
---- user output:
4.6593611564467
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 17:27:13) 
-- CODE:
p1 = input("Nome: ")
s = 20.114/0.4379
v = 19.984/4.289
if (p1 == "Voldemort".upper()):
	print(v,13)
else: 
	print(s,13)
-- OUTPUT:
45.9328613838776 13
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 17:27:21) 
-- CODE:
p1 = input("Nome: ")
s = 20.114/0.4379
v = 19.984/4.289
if (p1 == "Voldemort".upper()):
	print(v,13)
else: 
	print(s,13)
-- EXECUTION TIME:
0.136055
-- TEST CASE 1:
---- input:
SNAPE
---- correct output:
45.9328613838776
---- user output:
45.9328613838776 13
-- TEST CASE 2:
---- input:
VOLDEMORT
---- correct output:
4.6593611564467246
---- user output:
4.6593611564467246 13
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 17:27:38) 
-- CODE:
p1 = input("Nome: ")
s = 20.114/0.4379
v = 19.984/4.289
if (p1 == "Voldemort".upper()):
	print(v)
else: 
	print(s)
-- EXECUTION TIME:
0.174927
-- TEST CASE 1:
---- input:
SNAPE
---- correct output:
45.9328613838776
---- user output:
45.9328613838776
-- TEST CASE 2:
---- input:
VOLDEMORT
---- correct output:
4.6593611564467246
---- user output:
4.6593611564467246
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
